[package]
name = "sunk"
version = "0.1.1" # remember to update html_url_root
authors = ["alex-smith <azphreal19@protonmail.com>"]
description = "Rust bindings for the Subsonic music streaming API"
homepage = "https://github.com/Azphreal/sunk"
repository = "https://github.com/Azphreal/sunk"
documentation = "https://docs.rs/sunk/"
readme = "README.md"
keywords = ["subsonic", "airsonic", "music", "api", "webapi"]
categories = ["api-bindings"]
license = "Apache-2.0/MIT"

[dependencies]
failure = "0.1.3"
log = "0.4.6"
md5 = "0.6.0"
rand = "0.6.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
reqwest = "0.9.5"
