[package]
name = "sunk"
version = "0.1.2" # remember to update html_root_url
authors = ["xeals <xeals@pm.me>"]
description = "Rust bindings for the Subsonic music streaming API"
homepage = "https://github.com/xeals/sunk"
repository = "https://github.com/xeals/sunk"
documentation = "https://docs.rs/sunk/"
readme = "README.md"
keywords = ["subsonic", "airsonic", "music", "api", "webapi"]
categories = ["api-bindings"]
license = "Apache-2.0/MIT"
edition = "2021"

[dependencies]
thiserror = "1.0"
log = "0.4"
md5 = "0.7"
rand = "0.8"
readonly = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.67"
url = "2.3.1"

[dev-dependencies]
tokio-test = "0.4.2"
